<resources>
    <string name="app_name">SplitTheBill</string>
    <string name="name">Name</string>
    <string name="spent_value">Spent value</string>
    <string name="debt_value">Debt value</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="remove_person">Remove person</string>
    <string name="edit_person">Edit person</string>
</resources>